*You can now move the mouse pointer to the current navigator object position with insert+numpadDivide. Also you can move the current Navigator object to the mouse pointer with insert+numpadMultiply.
*Fixed a bug that stopped internet explorer reading when pressing tab
*Links no longer say the URL as their value. They also now say "visited link" for visited links.
*Greatly improved the internet explorer virtualBuffer by having the type of object (link, heading, list) spoken as you arrow on to it, but not having it actually written physically in the buffer. So if you arrow to a link, you can straight away arrow through its name, rather than arrowing across l i n k first. Also improved focus tracking and the updating of form fields when you move away from them after interacting with them. 
*Fixed bug where the default configuration had alignment=Always in the documentFormatting section. It is now Never. Please edit your nvda.ini to reflect this change if in deed your file was generated when this bug existed).
*Made MS Word and MS Excel slightly more responsive by using pre-generated com interface python code rather than querying the com interfaces each time a property or method is accessed. 
*Made NVDA over all much more responsive (especially in edit fields such as an address bar)
*Fixed bug where tooltips and help balloons were not speaking
*Fixed up some bugs in mouse tracking (NVDA should now report objects as the mouse moves over them).
*Added key echo scripts:
-insert+2 toggle speak typed characters
-insert+3 toggle speak typed words
-insert+4 toggle speak command keys
These scripts also make sure they say * when typing in edit fields with the protected state set (e.g. password fields).
*Fixed handling of crashes so that if the screen reader core dies, it should take the GUI down with it
*Added a voice dialog on the preferences menu