@@ -1,4 +1,3 @@
 *Internet explorer virtualBuffer seems to have problems with browser windows that are popup windows that don't have an address bar etc.
-*The NVDA exit dialog still does not always gain focus.
 *NVDA is not able to run as a service (even with the help of cygwin or another service loader).
 
