@@ -1,6 +1,5 @@
 *Need to generate a typelib for ISimpleDomNode in mozilla so NVDA can work out an IAccessible's mozilla MSAA child ID. Once this is done then work on the mozilla virtualBuffer can continue.
 *Need to Add events in internet explorer that can update parts of the page due to things such as javascript.
-*Need to be able to detect when a frame in internet explorer is fully loaded so we can re-load the virtualBuffer.
 *Need to make MSHTML editable panes accessible (e.g. outlook express edit message window)
 *Need to create mor NVDA config dialogs that can configure such things as document formatting and presentation.
 *Need to make windows security dialogs (including windows log on) readable
